tests/baselines/reference/tsxCorrectlyParseLessThanComparison1.errors.txt
tsxCorrectlyParseLessThanComparison1.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== tsxCorrectlyParseLessThanComparison1.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface Element {
            div: string;
        }
    }
    declare namespace React {
        class Component<P, S> {
            constructor(props?: P, context?: any);
            props: P;
        }
    }
    
    export class ShortDetails extends React.Component<{ id: number }, {}> {
        public render(): JSX.Element {
            if (this.props.id < 1) {
                return (<div></div>);
            }
        }
    }